Security & Access Rights Auditor/main/default/objects/Privileged_System_Permission__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of what this system permission controls</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>