Security & Access Rights Auditor/main/default/objects/Privileged_System_Permission__mdt/fields/Is_Privileged__c.field-meta.xml
<CustomField>
    <fullName>Is_Privileged__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this system permission is marked as privileged</description>
    <label>Is Privileged</label>
    <type>Checkbox</type>
</CustomField>