Security & Access Rights Auditor/main/default/objects/Privileged_System_Permission__mdt/fields/Permission_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_API_Name__c</fullName>
    <description>The API name of the system permission</description>
    <label>Permission API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>