Security & Access Rights Auditor/main/default/objects/Privileged_System_Permission__mdt/fields/Permission_Label__c.field-meta.xml
<CustomField>
    <fullName>Permission_Label__c</fullName>
    <description>The user-friendly label of the system permission</description>
    <label>Permission Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>